# core

./: .buildinfo  .gitignore  .ontokit_conf.yml  README.html  README.md  catalog-v001.xml  chebi-mappings.ttl  cheminf-mappings.ttl  cheminf.html  cheminf.ttl  contributors.ttl  core-inferred.ttl  core.html  core.ttl  dcat-mappings.ttl  ddoc.ttl  emmo-mappings.ttl  genindex.html  index.html  matter.html  matter.ttl  models.html  models.ttl  objects.inv  properties.html  pyproject.toml  requirements.txt  reused-terms.ttl  search.html  searchindex.js  ssbd-taxonomy.ttl  ssbdtaxonomy.html
.doctrees/: README.doctree  cheminf.doctree  core.doctree  environment.pickle  index.doctree  matter.doctree  models.doctree  properties.doctree  ssbdtaxonomy.doctree
.github/: emmocheck_conf.yml
_sources/: README.md.txt  cheminf.rst.txt  core.rst.txt  index.rst.txt  matter.rst.txt  models.rst.txt  properties.rst.txt  ssbdtaxonomy.rst.txt
context/: context.json  keywords.yaml
docs/: assessments.html  assessments.md  background.html  background.md  classes.html  classes.md  docterms.ttl  document-your-data.html  document-your-data.md  guiding-principles.html  guiding-principles.md  index.html  index.md  matter.html  matter.md  models.html  models.md  modules.html  modules.md  overview.html  paracetamol-example.ttl  repository_guide.html  repository_guide.md  taxonomy.html  tools.html
scripts/: addlabels.py  cheminf-extract.py  create-ssbd-dimension-taxonomy.py  csv-documentation.py
shacl/: shapes.ttl
sources/: ssbd_dimension_functionality_taxonomy.csv  ssbd_dimension_taxonomy.csv
(+101 files in other folders)
