[project]
requires-python = ">=3.9"
dependencies = [
    "pyshacl",
    "pylint~=4.0",
    "pre-commit~=4.5",
    "tripper[datadoc] @ git+https://github.com/EMMC-ASBL/tripper.git@master",
    "EMMOntoPy[ontodoc] @ git+https://github.com/emmo-repo/EMMOntoPy.git@master",
    "EMMOntoPy[ontokit] @ git+https://github.com/emmo-repo/EMMOntoPy.git@master"
]
